--- a/images/backgrounds/fssort.ini
+++ b/images/backgrounds/fssort.ini
@@ -18,3 +18,17 @@ BACKGROUND_16.JPG
 BACKGROUND_17.JPG
 BACKGROUND_18.JPG
 BACKGROUND_19.JPG
+FON.JPG
+FON1.PNG
+FON2.PNG
+FON3.PNG
+FON4.GIF
+FON5.GIF
+FON6.PNG
+FON7.GIF
+FON8.GIF
+FON9.GIF
+FON10.GIF
+FON11.PNG
+FON12.PNG
+FON13.PNG
